# api/routes/etecRoutes.js
@@ -6,5 +6,6 @@ const etecController = require('../controllers/etecController');
 
 // Define rotas usando as funções do controller
 router.post('/calcularCustoMensal', etecController.calcularCustoMensal);
+router.post("/calcularFerias", etecController.calcularFerias);
 
 module.exports = router;
